--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest] # Temporary stop to 'macos-latest'
+        os: [windows-latest] # Temporary stop to 'macos-latest' and 'ubuntu-latest'
         qt_version: ['5.15.2']
     steps:
     - name: Checkout code
