--- a/VisualLinkerScript.vcxproj.filters
+++ b/VisualLinkerScript.vcxproj.filters
@@ -479,37 +479,37 @@
     <ClCompile Include="Components\InputDialogs\QJumpToLineDialog.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\COverlaySectionOutput.h">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\COverlaySectionOutput.h">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\SLineF.h">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\SLineF.h">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\CFloorPlan.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\CFloorPlan.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\CMemorySection.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\CMemorySection.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\CSectionStatement.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\CSectionStatement.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\CSectionOutput.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\CSectionOutput.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\COverlaySectionOutput.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\COverlaySectionOutput.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\COverlaySectionStatement.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\COverlaySectionStatement.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\COverlayStatement.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\COverlayStatement.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\CProgramHeaderButton.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\CProgramHeaderButton.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
-    <ClCompile Include="Components\MemoryVisualizer\Models\CFillExpressionButton.cpp">
+    <ClCompile Include="Components\MemoryVisualizer\Composition\CFillExpressionButton.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -595,7 +595,7 @@
     <ClInclude Include="Messaging\UserInitiated\CFindRequest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CFloorPlan.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CFloorPlan.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Models\CFunctionCall.h">
@@ -667,7 +667,7 @@
     <ClInclude Include="ParsingEngine\CMasterParserException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CMemorySection.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CMemorySection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Models\CMemoryRegion.h">
@@ -682,7 +682,7 @@
     <ClInclude Include="ParsingEngine\SubParsers\CMemoryRegionParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CSectionStatement.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CSectionStatement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Models\CMemoryStatement.h">
@@ -706,10 +706,10 @@
     <ClInclude Include="Messaging\UserInitiated\COpenFileRequest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\COverlayStatement.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\COverlayStatement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\COverlaySectionStatement.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\COverlaySectionStatement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Models\CParameterSeparator.h">
@@ -760,7 +760,7 @@
     <ClInclude Include="ParsingEngine\SubParsers\CScopedRegionParser.tpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CSectionOutput.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CSectionOutput.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Models\CSectionOutputAtLmaRegion.h">
@@ -829,7 +829,7 @@
     <ClInclude Include="DrcEngine\Rules\CSymbolsDefinedInAdvanceRule.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CTooltip.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CTooltip.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Messaging\UserInitiated\CUndoRequest.h">
@@ -916,7 +916,7 @@
     <ClInclude Include="Components\MemoryVisualizer\EInsertObjectType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\EObjectState.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\EObjectState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ParsingEngine\EParserViolationCode.h">
@@ -1048,10 +1048,10 @@
     <ClInclude Include="Components\MemoryVisualizer\SBackendResponse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\SMetricPointF.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\SMetricPointF.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\SMetricRectangleF.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\SMetricRectangleF.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Components\QScintilla\src\SciAccessibility.h">
@@ -1222,31 +1222,31 @@
     <ClInclude Include="Components\QLinkerScriptSession\EditorAction\SEditorAddEmptyLine.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CSectionDefinitionBase.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CSectionDefinitionBase.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CAddressedRegion.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CAddressedRegion.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\SMetricSizeF.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\SMetricSizeF.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CProgramHeaderButton.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CProgramHeaderButton.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CFillExpressionButton.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CFillExpressionButton.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\SModelSelectionRange.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\SModelSelectionRange.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CModelMappedObject.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CModelMappedObject.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\CInteractiveObject.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\CInteractiveObject.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="Components\MemoryVisualizer\Models\SPixelSizeF.h">
+    <ClInclude Include="Components\MemoryVisualizer\Composition\SPixelSizeF.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
