--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
       #
       - name: Compile
         run: |
-             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release PREFIX=/usr
+             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release CONFIG+=c++17 PREFIX=/usr
              make -j8
              
       #
@@ -81,7 +81,7 @@ jobs:
       # Upload AppImage to build artifacts
       #
       - name: Upload AppImage
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
           path: ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
@@ -111,7 +111,7 @@ jobs:
       #
       - name: Compile
         run: |
-             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release
+             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release CONFIG+=c++17
              make -j8
              
       #
@@ -182,7 +182,7 @@ jobs:
       #
       - name: Compile
         run: |
-             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release
+             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release CONFIG+=c++17
              nmake
              
       #
