Reducing memory workload to prevent sudden death of the agent

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
       # Build everything
       # ================================================
       - name: Build
-        run: cmake --build build --config Release --parallel
+        run: cmake --build build --config Release --parallel 2
 
       # ================================================
       # Windows: Run windeployqt after build
